--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "generate": "drizzle-kit generate:mysql --schema=./drizzle/schema.ts --out=./drizzle/migrations",
+    "migrate": "drizzle-kit migrate:mysql"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.0",
@@ -39,15 +41,17 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.3",
+    "drizzle-orm": "^0.44.4",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "mysql2": "^3.14.3",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
